Implement processing of data and feature streams
This commit implements all necessary classes and Gradle tasks to perform the experiments from Chapter 8 of the dissertation "Feature Subset Selection and Multi-dimensional Continuous-Time Bayesian Network Classifiers for Streaming Data". Main updates include:

- Implemented the classification of time series data using Multi-CTBNCs in both data and feature streams.
- Introduced local and global concept drift detection methods for data streams.
- Developed the online MB-CTPC algorithm to locally update the structure of Multi-CTBNCs upon concept drifts.
- Incorporated an online feature subset selection algorithm for feature stream processing.
- Implemented the sampling of synthetic data and feature streams.
- Added new JUnit tests for robustness and reliability.
- Resolved software errors and improved user interface.